styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');

:root {
   --primary: 79, 70, 229;
   --secondary: 248, 250, 252;
   --text-heading: 30, 41, 59;
   --text-body: 71, 85, 105;
   --section-bg: #F8FAFC;
   font-size: 16px;
}

* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
}

body {
   font-family: "Plus Jakarta Sans", sans-serif;
   color: rgb(var(--text-body));
}

h1,
h2,
h3,
h4,
h5,
h6 {
   color: rgb(var(--text-heading));
}



/* Nav-bar */
#nav-bar {
   justify-content: space-between;
   padding: 1rem 0;
   font-weight: 500;

   .nav-logo {
      font-weight: 700;
   }

   a {
      text-decoration: none;
      color: #000;
   }

   .nav-links-container {

      @media only screen and (max-width: 768px) {
         display: none;
      }

      list-style-type: none;
      gap: 1rem;

      a {
         display: inline-block;
         padding: 0.25rem 0.5rem;
      }
   }

   .nav-btn {
      @media only screen and (max-width: 768px) {
         display: none;
      }

      gap: 0.75rem;
   }

   input {
      display: none;
   }

   .hamburger-label {
      display: none;

      @media only screen and (max-width: 768px) {
         display: block;
      }

      img {
         max-height: 2.5rem;
         cursor: pointer;
      }
   }
}


/* hero section */
.hero-section {
   background: linear-gradient(to top, rgba(var(--primary), 0.7), rgba(var(--primary), 0.1), rgba(var(--primary), 0));
   padding-bottom: 0 !important;

   .hero-heading {
      font-size: 3.75rem;
      margin-bottom: 1rem;
   }

   .hero-description {
      font-size: 1.2rem;
   }

   .download-app {
      margin-top: 1rem;
   }

   .hero-image-container {
      position: relative;
      text-align: center;
      margin-top: 1rem;

      img:first-child {
         position: relative;
         max-width: 100%;
      }

      img:nth-child(2) {
         position: absolute;
         bottom: 0;
         right: 7rem;
         max-height: 90%;

         @media only screen and (max-width: 1200px) {
            right: 0;
         }
      }
   }
}

/* sponsor section */
.sponsor-section {
   background-color: var(--section-bg);

   .image-container {
      flex-wrap: wrap;
      gap: 1rem 5rem;

      @media only screen and (max-width: 425px) {
         gap: 0 1.5rem;
         justify-content: flex-start;
      }

      img {
         max-width: 150px;

         @media only screen and (max-width: 425px) {
            max-width: 100px;
         }
      }

   }
}

/* main feature section */
.feature-cards-container {
   padding-top: 3rem;
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(3, 1fr);

   @media only screen and (max-width: 768px) {
      grid-template-columns: repeat(2, 1fr);
      gap: 1rem;
   }

   @media only screen and (max-width: 425px) {
      grid-template-columns: 1fr;
   }


   .feature-card {
      text-align: center;
      display: grid;
      gap: 1rem;
      padding: 1rem;

      img {
         margin: 0 auto;
      }
   }
}

/* Statistics Section */
.statistics-section {
   background-color: var(--section-bg);

   .data-container {
      display: table;
      width: 100%;
      margin-top: 1rem;

      @media only screen and (max-width: 425px) {
         display: block;
      }

      .data-card {
         display: table-cell;
         text-align: center;

         @media only screen and (max-width: 425px) {
            padding: 2rem 0;
            display: block;
            width: 100%;
            border: none;
         }

         &:not(:last-child) {
            border-right: 1px solid #ccc;

            @media only screen and (max-width: 425px) {
               border-bottom: 1px solid #ccc;
            }

         }

         h1 {
            font-size: 3.75rem;
         }

         h6 {
            font-size: 1.125rem;
         }
      }
   }

}

/* Features Section */
.features-section {
   .heading-tag {
      margin-left: 0;
   }

   .section-description,
   .section-heading {
      text-align: left;
      margin-left: 0;
   }

   .features-wrapper {
      display: flex;
      gap: 2rem;
      justify-content: space-between;
      align-items: center;
      margin-top: 3rem;

      @media only screen and (max-width: 425px) {
         flex-direction: column;
      }

      .features-container {
         flex: 1;

         .feature-card {
            padding: clamp(1rem, 1.5vw, 2rem);
            position: relative;

            &::before {
               content: '';
               position: absolute;
               height: 100%;
               width: 3px;
               border-radius: 0.5rem;
               background-color: #ccc;
               left: 0;
               top: 0;
               -webkit-border-radius: 0.5rem;
               -moz-border-radius: 0.5rem;
               -ms-border-radius: 0.5rem;
               -o-border-radius: 0.5rem;
            }

            &.active::before {
               background-color: rgb(var(--primary));
            }

            &:not(:last-child) {
               margin-bottom: 1rem;
            }

            h3 {
               font-size: 1.25rem;
            }
         }
      }

      .feature-image {
         img {
            width: 100%;
         }

         flex: 1;
      }
   }
}


/* Testimonials Section */
.testimonial-section {
   background-color: var(--section-bg);

   #reviews-wrapper {
      margin-top: 3rem;
      column-count: 3;

      @media only screen and (max-width: 768px) {
         column-count: 2;
      }

      @media only screen and (max-width: 425px) {
         column-count: 1;
      }

      .review-container {
         border: 1px solid #E2E8F0;
         padding: 1.5rem;
         border-radius: 1.5rem;
         -webkit-border-radius: 1.5rem;
         -moz-border-radius: 1.5rem;
         -ms-border-radius: 1.5rem;
         -o-border-radius: 1.5rem;
         break-inside: avoid;

         &:not(:last-child) {
            margin-bottom: 1rem;
         }

         .user-ratings {
            display: inline-block;
            color: rgb(250, 176, 5);
            margin-bottom: 1rem;
         }

         .review {
            font-size: 1.125rem;
         }

         .profile {
            justify-content: flex-start;
            margin-top: 1rem;
            gap: 1rem;

            img {
               width: 50px;
               aspect-ratio: 1/1;
               border-radius: 50%;
               -webkit-border-radius: 50%;
               -moz-border-radius: 50%;
               -ms-border-radius: 50%;
               -o-border-radius: 50%;
               object-fit: cover;
            }

         }
      }
   }
}


.contact-section {
   .heading-tag {
      margin-left: 0;
   }

   .section-description,
   .section-heading {
      text-align: left;
      margin-left: 0;
   }

   .contact-wrapper {
      margin-top: 3rem;
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      gap: 1rem;

      @media only screen and (max-width: 768px) {
         grid-template-columns: repeat(2, 1fr);
      }

      @media only screen and (max-width: 425px) {
         grid-template-columns: 1fr;
      }

      .contact-container {
         border: 1px solid #E2E8F0;
         padding: 1.5rem;
         border-radius: 1.5rem;
         -webkit-border-radius: 1.5rem;
         -moz-border-radius: 1.5rem;
         -ms-border-radius: 1.5rem;
         -o-border-radius: 1.5rem;

         img,
         h4 {
            margin-bottom: 0.5rem;
         }
      }
   }
}

/* CTA Section */
.cta-section {
   background-color: #EEF2FF;
   padding: 0 !important;
   position: relative;
   overflow: hidden;

   &>div {
      display: grid;
      grid-template-columns: 1fr 1fr;
      align-items: center;

      @media only screen and (max-width: 768px) {
         grid-template-columns: 1fr;
         padding: 3rem 0 5rem 0;
      }

      .content {

         * {
            text-align: left;
            margin: 0;
         }

         .section-description {
            font-weight: 500;
         }

         .btns {
            display: flex;
            gap: 1rem;
            margin-top: 2rem;

            button {
               font-weight: 700;

               &.btn-outline {
                  color: rgb(var(--primary));
               }
            }
         }
      }

      .images {
         position: relative;
         display: flex;
         justify-content: space-between;

         @media only screen and (max-width: 768px) {
            margin-top: 2rem;
         }

         img {
            max-width: 100%;
            position: relative;

            @media only screen and (max-width: 425px) {
               max-width: 50%;
            }

            &:first-child {
               bottom: -10rem;
               left: 0;

               @media only screen and (max-width: 768px) {
                  position: static;
                  transform: translateY(5rem);
                  -webkit-transform: translateY(5rem);
                  -moz-transform: translateY(5rem);
                  -ms-transform: translateY(5rem);
                  -o-transform: translateY(5rem);
               }
            }

            &:last-child {
               top: -8rem;
               right: 1rem;

               @media only screen and (max-width: 1024px) {
                  right: 10rem;
               }

               @media only screen and (max-width: 768px) {
                  position: static;
               }
            }
         }

      }
   }


}








/* ----------------------- ------------------- */

.middle {
   display: flex;
   align-items: center;
   justify-content: center;
}

/* filled and outlined button */
.btn {
   padding: 0.75rem 2rem;
   background-color: rgb(var(--primary));
   border: 2px solid transparent;
   border-radius: 10rem;
   -webkit-border-radius: 10rem;
   -moz-border-radius: 10rem;
   -ms-border-radius: 10rem;
   -o-border-radius: 10rem;
   color: #fff;
   cursor: pointer;
}

.btn-outline {
   border: 2px solid rgb(var(--primary));
   background-color: transparent;
   color: #000;
}

/* heading tag */
.heading-tag {
   background-color: #EEF2FF;
   width: max-content;
   padding: 0.5rem 1rem;
   border-radius: 5rem;
   -webkit-border-radius: 5rem;
   -moz-border-radius: 5rem;
   -ms-border-radius: 5rem;
   -o-border-radius: 5rem;
   margin: 0 auto;
   margin-bottom: 1.5rem;
   font-size: small;
   font-weight: 700;
   color: rgb(var(--primary));
}

/* for all section */
.section {
   padding: 5rem 0;

   .section-heading {
      font-size: 2.25rem;
      color: var(--text-heading);
      margin-bottom: 1.5rem;
   }

   .section-description {
      font-size: 1.25rem;
   }
}

.section-with-margin {
   @media only screen and (max-width: 1440px) {
      margin: 0 0.5rem !important;
   }
}


.max-50rem {
   max-width: 50rem;
   margin: 0 auto;
}

.text-center {
   text-align: center;
}

.text-primary {
   color: rgb(var(--primary));
}

.bg-primary {
   background-color: rgb(var(--primary));
}

.max-1440 {
   max-width: 1440px;
   margin: 0 auto;
}

